# Zombie-Game

./: .gitignore  AI.h  CMakeLists.txt  README.md  blood.h  game.cbp  game.layout  main.cpp  save.cpp  save.h  smog.cpp  sound.h  useful.cpp  useful.h  window.h
archived/legacy_win32/: README.md
archived/legacy_win32/project/: game.depend
archived/legacy_win32/src/: AI.cpp  blood.cpp  smog.h  sound.cpp  sound.h  useful.cpp  window.cpp  window.h
assets/: README.md
assets/characters/: CHARACTER_RIG_SPEC.md  man1.sheet  man1_rig.example.json  man1_rig.json  zom1.sheet
assets/effects/: boom1_strip.sheet  boom2_strip.sheet  gre_strip.sheet
assets/localization/us-en/: game_hud.loc  inventory.loc  market.loc  workbench.loc
assets/localization/zh-cn/: game_hud.loc  inventory.loc  market.loc  workbench.loc
assets/scenes/: scenes.json
assets/ui/: UI_ASSET_SPEC.md  ui_skin.example.json
assets/ui/buttons/: ui_button1.json
assets/ui/cards/: ui_card1.json  ui_card2.json  ui_card3.example.json  ui_card3.json
assets/ui/layouts/: game_hud.json  inventory.json  market.json  workbench.example.json  workbench.json
assets/ui/panels/: ui_panel1.json
assets/ui/progress/: ui_progress1.json
assets/ui/scrolls/: ui_scroll1.json
assets/weapons/: WEAPON_HOLD_SPEC.md  weapon.ini  weapons.json
assets/weapons/ak47/sounds/: config.ini
assets/weapons/glock/: hold_glock.json
docs/: ASSET_SPEC.md  ITEMS.md  ROADMAP.md  UI_ARCHITECTURE.md  UI_LAYOUT_SPEC.md  WEAPONS.md
image/button/: config.ini
image/trackbar/: config.ini
image/trackbar/button/: config.ini
image/weapon/: weapon.ini
src/: Actor.h  AssetPaths.cpp  AssetPaths.h  Assets.cpp  Assets.h  Bullet.cpp  Camera.cpp  Camera.h  CollisionMap.cpp  CollisionMap.h  Constants.h  Effects.cpp  Effects.h  FloorUtil.h  Grenade.cpp  Grenade.h  HudRenderer.cpp  HudRenderer.h  HumanoidBody.cpp  HumanoidBody.h  Input.cpp  Input.h  InventoryState.cpp  InventoryState.h  LocalizationTable.cpp  LocalizationTable.h  Player.cpp  Player.h  Presentation.h  Renderer2D.cpp  Renderer2D.h  SoundSystem.cpp  SoundSystem.h  SpriteCatalog.cpp  SpriteCatalog.h  SpriteSheet.cpp  SpriteSheet.h  SurfaceMask.cpp  SurfaceMask.h  Texture.cpp  (+12 more)
src/sdl3/: Assets.cpp  Assets.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  CollisionMap.cpp  CollisionMap.h  Constants.h  Grenade.cpp  Grenade.h  Input.cpp  Input.h  MathUtil.h  Player.cpp  Player.h  Renderer2D.cpp  Renderer2D.h  SoundSystem.cpp  SpriteCatalog.cpp  SpriteCatalog.h  SpriteSheet.cpp  SpriteSheet.h  SurfaceMask.cpp  Texture.cpp  Texture.h  Weapon.cpp  Zombie.cpp  Zombie.h  ZombieDirector.cpp  ZombieDirector.h  main.cpp
src/ui/: BoxItem.cpp  BoxItem.h  Button.cpp  Button.h  Canvas.h  Card.cpp  Card.h  Container.h  ControlStyle.cpp  ControlStyle.h  GameHudLayout.cpp  GameHudLayout.h  IconItem.cpp  IconItem.h  InventoryLayout.cpp  InventoryLayout.h  InventoryScreen.cpp  InventoryScreen.h  Item.cpp  Item.h  LayoutHotReload.cpp  LayoutHotReload.h  LayoutJson.cpp  LayoutJson.h  LayoutTypes.h  ListView.cpp  ListView.h  MarketLayout.cpp  MarketLayout.h  MarketScreen.cpp  MarketScreen.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  Scrollbar.cpp  Scrollbar.h  TabBar.cpp  TabBar.h  TextItem.cpp  (+5 more)
tools/: pack_spritesheet.py  run.sh  weapon_relight.py
